--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 NODE_ENV=development
-PORT=4000
+PORT=5000
 LOG_LEVEL=trace
 POSTGRES_PORT=5432
 POSTGRES_DB=postgres
@@ -11,7 +11,7 @@ JWT_SECRET_KEY=secret-key
 USE_FASTIFY=true
 
 TYPEORM_CONNECTION=postgres
-TYPEORM_HOST=rss-db
+TYPEORM_HOST=localhost
 TYPEORM_PORT=5432
 TYPEORM_DATABASE=postgres
 TYPEORM_USERNAME=postgres
@@ -19,6 +19,6 @@ TYPEORM_PASSWORD=postgres
 TYPEORM_LOGGING=true
 TYPEORM_MIGRATIONS_RUN=true
 TYPEORM_MIGRATIONS_DIR=src/migration
-TYPEORM_MIGRATIONS=src/migration/*.ts
+TYPEORM_MIGRATIONS=dist/migration/*.js
 TYPEORM_SYNCHRONIZED=false
-TYPEORM_ENTITIES=src/entity/*.ts
+TYPEORM_ENTITIES=dist/**/*.entity.js
