Finalized version of Jwt strategy for Auth

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 NODE_ENV=development
-PORT=5000
+PORT=4000
 LOG_LEVEL=trace
 POSTGRES_PORT=5432
 POSTGRES_DB=postgres
@@ -11,7 +11,7 @@ JWT_SECRET_KEY=secret-key
 USE_FASTIFY=true
 
 TYPEORM_CONNECTION=postgres
-TYPEORM_HOST=localhost
+TYPEORM_HOST=rss-db
 TYPEORM_PORT=5432
 TYPEORM_DATABASE=postgres
 TYPEORM_USERNAME=postgres
