--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "doc": "typedoc",
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \\\"src/**/*.ts\\\" \\\"test/**/*.ts\\\"",
@@ -62,6 +63,8 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.10.1",
+    "typedoc": "^0.22.11",
+    "typedoc-plugin-merge-modules": "^3.1.0",
     "typescript": "^4.3.5"
   },
   "jest": {
